Feat: Send file to custom webhook (#228)
* Send file to custom webhook

* Refactor: Complete code restructuration to separate core logic from features implementation (#231)

* refactor: moving code

* refactor: moving utils into core/

* refactor: separating modals core from usage

* refactor: moving browserInterface

* refactor: dispatching services/ into core/ and features/

* refactor: dispatching export/ service into core/ and features/

* refactor: dispatching extractor/ code into core/ and features/

* refactor: move domainCheck into scraper/

* refactor: rm unused

* refactor: grouping background methods and dispatching them

* Refactor: Moving logic from tab.ts ; Moving the scraper's domain check and output generation to background (#232)

* refactor: extracting launchScraper function and moving it to scraper/bg/

* refactor: extracting tab loading and injecting into the corresponding features/

* refactor: moving domain check in the background

* refactor: dispatching fallback actions

* refactor: moving output generation logic to background-script

* refactor: cleaning code and changing modal error text

* refactor: moving icon click update logic in the background-script

* chore: minor fixes

---------

Co-authored-by: Hugo COLLIN <101000595+Hugo-COLLIN@users.noreply.github.com>
Co-authored-by: Hugo COLLIN <hugo.collin1@outlook.fr>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "save-my-chatbot",
-  "version": "3.6.1",
+  "version": "3.7.0",
   "license": "RMD-C v1.0 License",
   "author": "Hugo COLLIN",
   "homepage": "https://save.hugocollin.com",
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@shoelace-style/shoelace": "^2.16.0",
+    "axios": "^1.7.9",
     "dompurify": "^3.1.6",
     "js-yaml": "^4.1.0",
     "showdown": "^2.1.0",
