--- a/.github/workflows/bpp.yml
+++ b/.github/workflows/bpp.yml
@@ -24,15 +24,19 @@ jobs:
           echo "::set-output name=version::$(node -p "require('./package.json').version")"
           echo "::set-output name=name::$(node -p "require('./package.json').name")"
 
+      # --- SOURCE ZIP ---
+      - name: Prepare source code zip
+        uses: vimtor/action-zip@v1.2
+        with:
+          files: ./
+          dest: releases/${{ steps.package_info.outputs.name }}_${{ steps.package_info.outputs.version }}_source.zip
+
       # --- BUILD ---
       - name: Install dependencies
         run: npm install
 
       - name: Build extension
         run: npm run prod
-
-#      - name: Prepare source code zip
-#        run: zip -r releases/${{ steps.package_info.outputs.name }}_${{ github.run_number }}_firefox_source.zip src/
 
       # --- PUBLISH ---
       - name: Browser Platform Publish
@@ -42,3 +46,5 @@ jobs:
           chrome-file: releases/${{ steps.package_info.outputs.name }}_${{ steps.package_info.outputs.version }}_chrome.zip
           firefox-file: releases/${{ steps.package_info.outputs.name }}_${{ steps.package_info.outputs.version }}_firefox.zip
           edge-file: releases/${{ steps.package_info.outputs.name }}_${{ steps.package_info.outputs.version }}_chrome.zip
+          source: releases/${{ steps.package_info.outputs.name }}_${{ steps.package_info.outputs.version }}_source.zip
+          notes: "1. Go to Phind.com or Perplexity.ai, then start a new search.\n2. Click on the extension icon to download a formatted markdown file containing the conversation."
