--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "save-my-chatbot",
   "version": "3.7.2",
-  "license": "RMD-C v1.0 License",
+  "license": "RMD-C 1.1",
   "author": "Hugo COLLIN",
   "homepage": "https://save.hugocollin.com",
   "keywords": [
