--- a/package.json
+++ b/package.json
@@ -24,17 +24,18 @@
   "devDependencies": {
     "@types/chrome": "^0.0.270",
     "@types/dompurify": "^3.0.5",
+    "@types/jest": "^29.5.14",
     "@types/showdown": "^2.0.6",
     "@types/turndown": "^5.0.5",
-    "@vitest/browser": "^2.0.5",
     "adm-zip": "^0.5.15",
     "chokidar": "^3.6.0",
     "cross-env": "^7.0.3",
     "esbuild": "^0.23.1",
+    "jest": "^29.7.0",
     "jsdom": "^25.0.0",
     "lit": "^3.2.0",
-    "typescript": "^5.5.4",
-    "vitest": "^2.0.5"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.5.4"
   },
   "dependencies": {
     "@shoelace-style/shoelace": "^2.16.0",
