--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
     "resolveJsonModule": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "types": ["jest"]
   },
-  "include": ["src"]
+  "include": ["src", "tests/**/*.test.ts"],
 }
