--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/chrome": "^0.0.270",
     "@types/dompurify": "^3.0.5",
     "@types/jest": "^29.5.14",
+    "@types/jsdom": "^21.1.7",
     "@types/showdown": "^2.0.6",
     "@types/turndown": "^5.0.5",
     "adm-zip": "^0.5.15",
@@ -32,7 +33,7 @@
     "cross-env": "^7.0.3",
     "esbuild": "^0.23.1",
     "jest": "^29.7.0",
-    "jsdom": "^25.0.0",
+    "jsdom": "^25.0.1",
     "lit": "^3.2.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.4"
