fix: using content-script download as background-script download is buggy

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,8 +15,7 @@
     "scripting",
     "activeTab",
     "storage",
-    "contextMenus",
-    "downloads"
+    "contextMenus"
   ],
   "host_permissions": [
     "*://*.phind.com/*",
