--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "save-my-chatbot",
-  "version": "3.8.2",
+  "version": "3.8.3",
   "license": "RMD-C 1.1",
   "author": "Hugo COLLIN",
   "homepage": "https://save.hugocollin.com",
@@ -35,6 +35,7 @@
     "jest": "^29.7.0",
     "jsdom": "^25.0.1",
     "lit": "^3.2.0",
+    "pug": "^3.0.3",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.4"
   },
