--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chokidar": "^3.6.0",
     "cross-env": "^7.0.3",
     "esbuild": "^0.25.0",
+    "esbuild-plugin-copy": "^2.1.1",
     "jest": "^29.7.0",
     "jsdom": "^25.0.1",
     "lit": "^3.2.0",
