Style&Fix: Improve options page (#269)
* refactor(config): using esbuild-plugin-copy to copy static files

* refactor(config): cleaner code

* chore: configuring icon location

* refactor: changing icons location

* feat: adding folding sections

* feat: folding others sl-details when unfolding one

* feat: bottom button

* feat: scrollable sl-details list

* feat: scrollable sl-details contents

* refactor: extracting folding logic into DetailsGroup component

* refactor: cleaner code

* style: managing height

* style: scrollbar for each sl-details

* style: only one sl-details opened at a time

* style: scrollbar for each sl-details content

* refactor: cleaning code

* fix: better height

* 3.8.4

* refactor: rm unused details group

* style: smaller padding

* style: sl-alert margin

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "save-my-chatbot",
-  "version": "3.8.3",
+  "version": "3.8.4",
   "license": "RMD-C 1.1",
   "author": "Hugo COLLIN",
   "homepage": "https://save.hugocollin.com",
@@ -32,6 +32,7 @@
     "chokidar": "^3.6.0",
     "cross-env": "^7.0.3",
     "esbuild": "^0.25.0",
+    "esbuild-plugin-copy": "^2.1.1",
     "jest": "^29.7.0",
     "jsdom": "^25.0.1",
     "lit": "^3.2.0",
